format: remove comments, fix alignment of details (right side)

--- a/src/app/[countryCode]/page.module.scss
+++ b/src/app/[countryCode]/page.module.scss
@@ -49,18 +49,6 @@
   }
 }
 
-// .flagImage {
-//   margin-top: 50px;
-//   width: 100%;
-//   height: 100%;
-//   position: relative;
-//   align-self: center;
-//   @media screen and (min-width: 600px) {
-//     width: 560px;
-//     height: 400px;
-//   }
-// }
-
 .flagImage {
   box-shadow: 'rgba(0, 0, 0, 0.35) 0px 5px 15px';
   margin-top: 50px;
@@ -92,7 +80,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 50px;
-    padding-right: 20px;
+    padding-right: 100px;
     padding-left: 20px;
   }
 
@@ -113,7 +101,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
   }
 }
 
